Library/AXL(Library)/Visual Basic/AXD.bas


' Verify if the signal is maintained Off state during the calling time as much as count in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for input contact
' lCount     : 0 ~ 0x7FFFFFFF(2147483647)
' *upValue   : FALSE(0)
'            : TRUE(1)
' lStart      : 1(First call)
'             : 0(Repeat call)
'==============================================================================================='
Public Declare Function AxdiIsOff Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal lCount As Long, ByRef upValue As Long, ByVal lStart As Long) As Long


' Maintain On state during mSec set in Offset position of specified output contact module, then turns Off
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for output contact
' lCount     : 0 ~ 0x7FFFFFFF(2147483647)
' lmSec      : 1 ~ 30000
'==============================================================================================='
Public Declare Function AxdoOutPulseOn Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal lmSec As Long) As Long


' Maintain Off state during mSec set in Offset position of specified output contact module, then turns On
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for output contact
' lCount     : 0 ~ 0x7FFFFFFF(2147483647)
' lmSec      : 1 ~ 30000
'==============================================================================================='
Public Declare Function AxdoOutPulseOff Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal lmSec As Long) As Long


' Toggling by numbers and interval which are set in Offset position of specified output contact module, then afterward maintaining the original output state
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for output contact
' lInitState : Off(0)
'            : On(1)
' lmSecOn    : 1 ~ 30000
' lmSecOff   : 1 ~ 30000
' lCount     : 1 ~ 0x7FFFFFFF(2147483647)
'            : -1
'==============================================================================================='
Public Declare Function AxdoToggleStart Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal lInitState As Long, ByVal lmSecOn As Long, ByVal lmSecOff As Long, ByVal lCount As Long) As Long


' Toggling by numbers and interval which are set in Offset position of specified output contact module, then afterward maintaining the original output state
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for output contact
' uOnOff     : Off(0)
'            : On(1)
'==============================================================================================='
Public Declare Function AxdoToggleStop Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal uOnOff As Long) As Long


' In disconnect cases Set output status of specified module by byte.
'==============================================================================================='
' lModuleNo   : Module number
' dwSize      : Set Byte Number(ex. RTEX-DB32 : 2, RTEX-DO32 : 4)
' dwaSetValue : Set Value(Default : Status before Disconnect)
'             : 0 --> Disconnect before Status
'             : 1 --> On
'             : 2 --> Off
'             : 3 --> User Value, (Default user value : 'Off', Changeable from 'AxdoSetNetworkErrorUserValue()'). (SIII / ML3 / ECAT only)
'==============================================================================================='
Public Declare Function AxdoSetNetworkErrorAct Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwSize As Long, ByRef dwaSetValue As Long) As Long


' API function for setting user defined output value in bytes when specified output module network is broken. (SIII / ML3 / ECAT only)
'==============================================================================================='
' lModuleNo   : Module number(Support dispersion type slaves only)
' dwOffset    : Offset position by dword unit between output index, Increasing unit of byte(Designation range:0, 1, 2, 3)
' dwValue     : Output contact value(00 ~ FFH)
'             : It must be set to 'User Value' for corresponding offset by 'AxdoSetNetworkErrorAct()'
'==============================================================================================='
Public Declare Function AxdoSetNetworkErrorUserValue Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwOffset As Long, ByVal dwValue As Long) As Long


' Setting connection number of specified module.
Public Declare Function AxdSetContactNum Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwInputNum As Long, ByVal dwOutputNum As Long) As Long


' Verifying connection number of specified module.
Public Declare Function AxdGetContactNum Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef dwpInputNum As Long, ByRef dwpOutputNum As Long) As Long




'== API for EtherCAT.
' Output data by bit length in Offset position of specified output module
'===============================================================================================//
' lModuleNo        : Module number
' dwBitOffset      : Bit offset position by dword unit between output index
' dwDataBitLength  : Bit length of output data
' pbyData          : The pointer of output data(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoWriteOutportByBitOffset Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwBitOffset As Long, ByVal dwDataBitLength As Long, ByRef pbyData As Byte) As Long

' Read data by bit length in Offset position of specified input module
'===============================================================================================//
' lModuleNo        : Module number
' dwBitOffset      : Bit offset position by dword unit between input index
' dwDataBitLength  : Bit length of output data
' pbyData          : The pointer of input data(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdiReadInportByBitOffset Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwBitOffset As Long, ByVal dwDataBitLength As Long, ByRef pbyData As Byte) As Long

' Read data by bit length in Offset position of specified output module
'===============================================================================================//
' lModuleNo        : Module number
' dwBitOffset      : Bit offset position by dword unit between output index
' dwDataBitLength  : Bit length of input data
' pbyData          : The pointer of input data(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoReadOutportByBitOffset Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwBitOffset As Long, ByVal dwDataBitLength As Long, ByRef pbyData As Byte) As Long

    Public Declare Function AxdoLinkSetOutport Lib "AXL.dll" (ByVal lLinkNo As Long, ByVal lDstModuleNo As Long, ByVal uDstBitOffset As Long, ByVal lSrcModuleNo As Long, ByVal uSrcBitOffset As Long, ByVal uSrcDataBitLength As Long, ByVal uSrcPortType As Long) As Long
    Public Declare Function AxdoLinkGetOutport Lib "AXL.dll" (ByVal lLinkNo As Long, ByRef lpDstModuleNo As Long, ByRef upDstBitOffset As Long, ByRef lpSrcModuleNo As Long, ByRef upSrcBitOffset As Long, ByRef upSrcDataBitLength As Long, ByRef upSrcPortType As Long) As Long
    Public Declare Function AxdoLinkResetOutport Lib "AXL.dll" (ByVal lLinkNo As Long) As Long

    Public Declare Function AxdoInterLockSetOutport Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lInterLockNo As Long, ByVal lDstModuleNo As Long, ByVal uDstBitOffset As Long, ByVal lSrcModuleNo As Long, ByVal uSrcBitOffset As Long, ByVal uSrcPortType As Long, ByVal uSrcCondition As Long, ByVal uOutputMode As Long, ByVal uOutputModeData As Long) As Long
    Public Declare Function AxdoInterLockGetOutport Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lInterLockNo As Long, ByRef lpDstModuleNo As Long, ByRef upDstBitOffset As Long, ByRef lpSrcModuleNo As Long, ByRef upSrcBitOffset As Long, ByRef upSrcPortType As Long, ByRef upSrcCondition As Long, ByRef upOutputMode As Long, ByRef upOutputModeData As Long) As Long
    Public Declare Function AxdoInterLockIsEnabled Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lInterLockNo As Long, ByRef upEnabled As Long) As Long
    Public Declare Function AxdoInterLockResetOutport Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lInterLockNo As Long) As Long


